[package]
edition = "2021"
name = "short_msg"
version = "0.1.0"

[features]
v5 = []

[dependencies]
bincode = "2.0.0-rc.1"
bitstream-io = "1.5"
chrono = "0.4"
lazy_static = "1.4"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
bytes = "1"
tokio = {version = "1", features = ["io-util", "macros", "net", "rt-multi-thread"]}
